only log error code, not path, as info is covered by CloudSyncVerticle